# jpncap

./: CMakeLists.txt  README.md
data/: deinflect.txt  jpncap.desktop.in  substitutions.txt
dict_gen/: generate_jm_dict.py  generate_kanji_dict.py
src/: capture.c  capture.h  configuration.h.in  dictionary.c  dictionary.h  japanese_util.c  japanese_util.h  main.c  main_window.c  main_window.h  recognize.c  recognize.h  string_util.h  vector.c  vector.h
